crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_double_quote.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(r#\"x\"a b\"y\"#)?"
---
TokenizerResult(
  input: "x\"a b\"y",
  result: [
    Word("x\"a b\"y", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 7,
        line: 1,
        column: 8,
      ),
    )),
  ],
)
