crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_double_quoted_arithmetic_expression.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(r#\"x\"$((1+2))\"y\"#)?"
---
TokenizerResult(
  input: "x\"$((1+2))\"y",
  result: [
    Word("x\"$((1+2))\"y", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 12,
        line: 1,
        column: 13,
      ),
    )),
  ],
)
